// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeekViewList renders a week with no rehearsals 1`] = `
<div
  className="ui celled relaxed list"
  role="list"
>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Sun, January 7
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Mon, January 8
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Tue, January 9
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Wed, January 10
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Thu, January 11
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Fri, January 12
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Sat, January 13
    </div>
    No Rehearsals
  </div>
</div>
`;

exports[`WeekViewList renders a week with rehearsals 1`] = `
<div
  className="ui celled relaxed list"
  role="list"
>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Sun, January 14
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Mon, January 15
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Tue, January 16
    </div>
    <div
      className="ui bulleted list"
      role="list"
    >
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        12:00 - 14:00
      </div>
    </div>
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Wed, January 17
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Thu, January 18
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Fri, January 19
    </div>
    No Rehearsals
  </div>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="header"
    >
      Sat, January 20
    </div>
    <div
      className="ui bulleted list"
      role="list"
    >
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        13:00 - 14:30
      </div>
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        14:30 - 16:00
      </div>
      <div
        className="item"
        data-value={undefined}
        onClick={[Function]}
        role="listitem"
      >
        16:00 - 18:00
      </div>
    </div>
  </div>
</div>
`;
